--- a/index.html
+++ b/index.html
@@ -71,13 +71,11 @@
             </div>
         </row>
         <row>
-            <div class="col-md-4"></div>
-            <div class="col-md-4" id="image-spot">
+            <div class="col-md-12" id="image-spot">
                 <h2>
-                    <div id="image-holder" class="resize_fit_center"></div>
+                    <div id="image-holder"></div>
                 </h2>
             </div>
-            <div class="col-md-4"></div>
         </row>
         <row>
             <div class="col-md-12">
@@ -135,7 +133,6 @@
                 <div class="col-md-2"></div>
             </row>
     </div>
-    <footer id="footer">Created By: Alexander Elkhatib</footer>
         <!-- JS!!! -->
         <script src="assets/javascript/app.js"></script>
 </body>
